got it working, added ssl

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ IRC_NICKNAME=aircbot
 IRC_CHANNEL=#yourchannel
 IRC_PASSWORD=
 
+# SSL Settings (for secure connections)
+IRC_USE_SSL=false
+IRC_SSL_VERIFY=true
+
 # Database
 DATABASE_PATH=data/links.db
 
