added initial chat capability

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,14 @@ IRC_PASSWORD=
 IRC_USE_SSL=false
 IRC_SSL_VERIFY=true
 
+# LLM Settings (for Ollama with OpenAI-compatible API)
+LLM_ENABLED=true
+LLM_BASE_URL=http://localhost:11434/v1
+LLM_API_KEY=ollama
+LLM_MODEL=deepseek-r1:latest
+LLM_MAX_TOKENS=150
+LLM_TEMPERATURE=0.7
+
 # Database
 DATABASE_PATH=data/links.db
 
