added rate limiting

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,9 @@ LLM_TEMPERATURE=0.7
 # Database
 DATABASE_PATH=data/links.db
 
+# Rate Limiting
+RATE_LIMIT_USER_PER_MINUTE=1
+RATE_LIMIT_TOTAL_PER_MINUTE=10
+
 # Optional: IRC server password (if required)
 IRC_SERVER_PASSWORD=
