cleaned up more

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ LLM_API_KEY=ollama
 LLM_MODEL=deepseek-r1:latest
 LLM_MAX_TOKENS=150
 LLM_TEMPERATURE=0.7
+LLM_RETRY_ATTEMPTS=3
 
 # Database
 DATABASE_PATH=data/links.db
