--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,12 @@ DATABASE_PATH=data/links.db
 RATE_LIMIT_USER_PER_MINUTE=1
 RATE_LIMIT_TOTAL_PER_MINUTE=10
 
+# Message Context Settings
+MESSAGE_QUEUE_SIZE=50
+CONTEXT_ANALYSIS_ENABLED=true
+CONTEXT_RELEVANCE_THRESHOLD=0.3
+SAVE_MESSAGES_TO_DB=false
+MAX_CONTEXT_MESSAGES=10
+
 # Optional: IRC server password (if required)
 IRC_SERVER_PASSWORD=
