made context weights configurable

--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,14 @@ CONTEXT_RELEVANCE_THRESHOLD=0.3
 SAVE_MESSAGES_TO_DB=false
 MAX_CONTEXT_MESSAGES=10
 
+# Context Relevance Scoring Weights (fine-tune these for your community)
+WEIGHT_KEYWORD_OVERLAP=0.4
+WEIGHT_TECHNICAL_KEYWORDS=0.3
+WEIGHT_QUESTION_CONTEXT=0.15
+WEIGHT_RECENCY_BONUS=0.1
+WEIGHT_BOT_INTERACTION=0.1
+WEIGHT_URL_BONUS=0.2
+PENALTY_SHORT_MESSAGE=0.7
+
 # Optional: IRC server password (if required)
 IRC_SERVER_PASSWORD=
