added /msg for most cmds and support /msg questions

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,11 @@ DATABASE_PATH=data/links.db
 RATE_LIMIT_USER_PER_MINUTE=1
 RATE_LIMIT_TOTAL_PER_MINUTE=10
 
+# Private messaging settings
+PRIVATE_MSG_ENABLED=true
+LINKS_USE_PRIVATE_MSG=true
+COMMANDS_USE_PRIVATE_MSG=true
+
 # Message Context Settings
 MESSAGE_QUEUE_SIZE=50
 CONTEXT_ANALYSIS_ENABLED=true
