added openai interaction

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,14 @@ IRC_PASSWORD=
 IRC_USE_SSL=false
 IRC_SSL_VERIFY=true
 
-# LLM Settings (for Ollama with OpenAI-compatible API)
+# LLM Mode Configuration
+# Options: 'local_only', 'openai_only', 'fallback'
+# - local_only: Use only local AI (Ollama)
+# - openai_only: Use only OpenAI API
+# - fallback: Try local AI first, fall back to OpenAI if local fails or gives poor response
+LLM_MODE=local_only
+
+# Local LLM Settings (for Ollama with OpenAI-compatible API)
 LLM_ENABLED=true
 LLM_BASE_URL=http://localhost:11434/v1
 LLM_API_KEY=ollama
@@ -17,6 +24,17 @@ LLM_MODEL=deepseek-r1:latest
 LLM_MAX_TOKENS=150
 LLM_TEMPERATURE=0.7
 LLM_RETRY_ATTEMPTS=3
+
+# OpenAI Settings
+# IMPORTANT: For security, set OPENAI_API_KEY in your shell environment instead of this file!
+# The bot will automatically detect and use your environment OPENAI_API_KEY
+# Only set OPENAI_API_KEY_CONFIG here if you can't use environment variables
+OPENAI_ENABLED=false
+# OPENAI_API_KEY_CONFIG=your_openai_api_key_here  # Use environment OPENAI_API_KEY instead!
+OPENAI_MODEL=gpt-4.1-nano
+OPENAI_MAX_TOKENS=150
+OPENAI_TEMPERATURE=0.7
+OPENAI_DAILY_LIMIT=100
 
 # Database
 DATABASE_PATH=data/links.db
