added semantic similarity

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,76 @@ PENALTY_SHORT_MESSAGE=0.7
 
 # Optional: IRC server password (if required)
 IRC_SERVER_PASSWORD=
+
+# Content Filter Settings
+# CONTENT_FILTER_ENABLED=true                    # Enable content filtering
+# CONTENT_FILTER_LLM_ASSIST=true                 # Use LLM for content analysis
+# CONTENT_FILTER_LOG_BLOCKED=true                # Log blocked content
+# CONTENT_FILTER_MAX_MESSAGE_LENGTH=1000         # Max message length
+# CONTENT_FILTER_STRICT_MODE=false               # Strict filtering mode
+# CONTENT_FILTER_BLOCK_PII=true                  # Block personal info
+# CONTENT_FILTER_BLOCK_EXCESSIVE_CAPS=true       # Block excessive caps
+
+# Privacy Filter Settings
+# PRIVACY_FILTER_ENABLED=true                    # Enable privacy filtering
+# PRIVACY_LEVEL=medium                           # Privacy level (none/low/medium/high/paranoid)
+# PRIVACY_MAX_CHANNEL_USERS=20                   # Skip privacy for large channels
+# PRIVACY_USERNAME_ANONYMIZATION=true            # Anonymize usernames
+# PRIVACY_PII_DETECTION=true                     # Detect personal info
+# PRIVACY_PRESERVE_CONVERSATION_FLOW=true        # Preserve conversation context
+
+# Personality Prompt Settings
+# PERSONALITY_ENABLED=false                      # Enable custom personality prompts
+# PERSONALITY_PROMPT_FILE=personality_prompt.txt # Path to personality file
+
+# Admin Settings
+# ADMIN_USERS=admin1,admin2                      # Comma-separated admin usernames
+
+# LLM Fallback Configuration
+# Controls when to fallback from local LLM to OpenAI based on response quality
+# Only active when LLM_MODE=fallback
+
+# Basic response filtering
+# FALLBACK_MIN_RESPONSE_LENGTH=3                 # Min chars for valid response
+# FALLBACK_DONT_KNOW_CONTEXT_MIN_WORDS=15        # Context check for uncertain responses
+
+# Relevance scoring thresholds
+# FALLBACK_RELEVANCE_MIN_RATIO=0.05              # Min keyword overlap ratio
+# FALLBACK_RELEVANCE_MIN_QUESTION_WORDS=3        # Min question words for relevance check
+
+# Question type mismatch detection
+# FALLBACK_TYPE_MISMATCH_MIN_RATIO=0.1           # Min ratio for type mismatch
+# FALLBACK_TYPE_MISMATCH_MIN_QUESTION_WORDS=5    # Min words for type check
+
+# Response quality thresholds
+# FALLBACK_GENERIC_RESPONSE_MAX_WORDS=25         # Max words for generic responses
+# FALLBACK_EXPLANATION_MIN_WORDS=8               # Min words for explanations
+# FALLBACK_REPETITION_MAX_WORD_RATIO=0.3         # Max word repetition ratio
+# FALLBACK_REPETITION_MIN_WORD_LENGTH=3          # Min word length for repetition check
+
+# Short answer bypass thresholds
+# FALLBACK_PROCEDURAL_SHORT_ANSWER_MAX_WORDS=15  # Max words for procedural short answers
+# FALLBACK_CODE_SHORT_ANSWER_MAX_WORDS=10        # Max words for code short answers
+
+# Semantic Similarity Configuration
+# Advanced AI-based response relevance scoring using sentence transformers
+# Provides more intelligent fallback decisions beyond simple keyword matching
+# Requires: pip install sentence-transformers
+
+# Enable semantic similarity scoring (disabled by default for performance)
+# SEMANTIC_SIMILARITY_ENABLED=false              # Enable semantic similarity scoring
+# SEMANTIC_SIMILARITY_MIN_THRESHOLD=0.3          # Min similarity score to pass (0.0-1.0)
+# SEMANTIC_SIMILARITY_WEIGHT=0.4                 # Weight in combined scoring (0.0-1.0)
+
+# Model configuration
+# SEMANTIC_MODEL_NAME=all-MiniLM-L6-v2           # Sentence transformer model (22MB)
+# SEMANTIC_MODEL_DEVICE=cpu                      # Processing device (cpu/cuda)
+# SEMANTIC_CACHE_SIZE=100                        # Cache size for embeddings
+
+# Context-aware scoring
+# SEMANTIC_CONTEXT_ENABLED=true                  # Enable context-aware scoring
+# SEMANTIC_CONTEXT_WEIGHT=0.2                    # Weight for context matching (0.0-1.0)
+
+# Technical keyword boosting
+# SEMANTIC_ENTITY_BOOST=1.2                      # Boost factor for technical terms
+# SEMANTIC_TECHNICAL_KEYWORDS=code,function,class,api,database,server,config,install,debug,error,fix,implement,create,build,deploy,test,python,javascript,sql,git,docker,linux,windows,network,security,performance
